@@ -576,6 +576,9 @@ Release 0.20.0 - Unreleased
     HADOOP-5079. HashFunction inadvertently destroys some randomness
     (Jonathan Ellis via stack)
 
+    HADOOP-4999. A failure to write to FsEditsLog results in 
+    IndexOutOfBounds exception. (Boris Shkolnik via rangadi)
+
 Release 0.19.1 - Unreleased
 
   IMPROVEMENTS
